--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "css-loader": "^0.23.1",
     "express": "^4.13.4",
     "extract-text-webpack-plugin": "^1.0.1",
+    "jquery": "^2.2.3",
     "node-sass": "^3.7.0",
     "path": "^0.12.7",
     "react": "^15.0.2",
