--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-redux": "^4.4.5",
     "react-router": "^2.4.0",
     "redux": "^3.5.2",
-    "sass-loader": "^3.2.0"
+    "sass-loader": "^3.2.0",
+    "whatwg-fetch": "^0.11.1"
   },
   "devDependencies": {
     "babel-cli": "^6.8.0",
