--- a/package.json
+++ b/package.json
@@ -10,14 +10,19 @@
   "author": "Zee",
   "license": "ISC",
   "dependencies": {
+    "color": "^0.11.1",
     "css-loader": "^0.23.1",
     "express": "^4.13.4",
     "extract-text-webpack-plugin": "^1.0.1",
     "jquery": "^2.2.3",
+    "nconf": "^0.8.4",
     "node-sass": "^3.7.0",
     "path": "^0.12.7",
     "react": "^15.0.2",
+    "react-bootstrap": "^0.29.4",
     "react-dom": "^15.0.2",
+    "react-motion": "^0.4.3",
+    "react-motion-menu": "^0.2.1",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.0",
     "redux": "^3.5.2",
