--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Zee",
   "license": "ISC",
   "dependencies": {
+    "bunyan": "^1.8.1",
     "color": "^0.11.1",
     "css-loader": "^0.23.1",
     "express": "^4.13.4",
