--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "node-sass": "^3.7.0",
     "path": "^0.12.7",
     "react": "^15.0.2",
+    "react-blur": "^0.3.1",
     "react-bootstrap": "^0.29.4",
     "react-dom": "^15.0.2",
     "react-loader": "^2.4.0",
