--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Frontend website using nodejs and reactjs",
   "main": "server.js",
   "scripts": {
-    "build-dist": "node node_modules/webpack/bin/webpack",
+    "build-dist": "node node_modules/webpack/bin/webpack.js",
     "watch": "node node_modules/webpack/bin/webpack -w",
-    "start": "node node_modules/webpack/bin/webpack && nodemon server.js",
+    "start": "node node_modules/webpack/bin/webpack.js && nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Zee",
